Fixed z-index issues bentween canvas and text (#4)

--- a/src/components/CanvasBackground/CanvasBackground.scss
+++ b/src/components/CanvasBackground/CanvasBackground.scss
@@ -3,6 +3,6 @@ canvas {
     top: 0!important;
     width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: 10;
     cursor: url('../images/pencil.png') 0 25, pointer;
 }
