--- a/src/components/IntroSection/IntroSection.scss
+++ b/src/components/IntroSection/IntroSection.scss
@@ -4,6 +4,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    z-index: -1;
 
     @media (min-width: 992px) {
         padding: 2em 2em;
